@@ -81,9 +81,12 @@ void lprintf(int dtype, char *fmt, ...)
 
 int initcolor(void)
 {
-	if (!has_colors())
+	initscr();
+	if (has_colors() == FALSE )
+	{
+		endwin();
 		return 0;
-	initscr();		/* Start ncurses */
+	}
 	start_color();		/* Initialize color support */
 	refresh();		/* Clear screen */
 	noecho();		/* Don't echo */
